--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
         h4 { font-size: 1.2rem; margin-bottom: 15px; }
         p { font-size: 1.1rem; font-weight: 300; line-height: 1.7; }
         
+        /* FIX: H2 Spacing */
         .section-subtitle {
             text-align: center;
             font-size: 1.2rem;
             max-width: 800px;
-            margin: -30px auto 50px;
+            margin: 0 auto 50px;
             font-weight: 300;
         }
         
@@ -358,7 +359,7 @@
             <a href="#" class="nav-logo">Tokenize</a>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="#how-it-works">Як це працює</a></li>
-                <li class="nav-item"><a href="#assets">Активи</a></li>
+                <li class="nav-item"><a href="#problem">Проблема та Рішення</a></li> <li class="nav-item"><a href="#assets">Активи</a></li>
                 <li class="nav-item"><a href="#mission">Наша місія</a></li>
                 <li class="nav-item"><a href="#cases">Кейси</a></li>
                 <li class="nav-item"><a href="#pricing">Цінність</a></li>
@@ -377,7 +378,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Токенізуйте ваш реальний актив. Безкоштовно.</h1>
-                <p class="sub-headline">Наш AI перетворює ваш актив на цифровий токен з токеномікою експертного рівня. <strong>Жодних комісій. Жодних прихованих платежів.</strong> Ми заробляємо, лише коли заробляєте ви, отримуючи 3% частку у вашому проекті.</p>
+                <p class="sub-headline">Наш AI перетворює ваш актив на цифровий токен з токеномікою експертного рівня. <strong>Жодних комісій. Жодних прихованих платежів.</strong> Ми заробляємо, лише коли заробляєте ви, отримуючи комісію у розмірі 3% від випущених токенів.</p>
                 <div class="hero-actions">
                     <a href="#" class="btn btn-hero quiz-trigger">
                         <span>Пройти 1-хвилинний квіз</span>
@@ -406,6 +407,7 @@
 
     <section class="problem-solution" id="problem">
         <div class="container">
+            <h2>Проблеми традиційних ринків та їх рішення</h2>
             <div class="grid-2">
                 <div class="problem">
                     <h3>Традиційні Активи. Традиційні Проблеми.</h3>
